--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,3 +11,7 @@
     height:50px;
     font-size:14pt;
 }
+
+.loading-image {
+    height: 50px;
+}
