--- a/src/app/search-result/search-result.component.css
+++ b/src/app/search-result/search-result.component.css
@@ -35,6 +35,9 @@
     cursor: pointer;
 }
 
+:host {            
+    width: 100%; 
+}
 
 @keyframes fadein {
     from { opacity: 0; }
@@ -63,4 +66,8 @@
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+.no-results {
+    color: #4F7CAC;
 }
